[gd_scene load_steps=25 format=2]

[ext_resource path="res://Scripts/Play Four.gd" type="Script" id=1]
[ext_resource path="res://Assets/Choose a Character.png" type="Texture" id=2]
[ext_resource path="res://Assets/Left.png" type="Texture" id=3]
[ext_resource path="res://Assets/Left Pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Play.png" type="Texture" id=5]
[ext_resource path="res://Assets/Play Pressed.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Four Character Options.gd" type="Script" id=7]
[ext_resource path="res://Assets/Joe.png" type="Texture" id=8]
[ext_resource path="res://Assets/Joe Pressed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Zombie.png" type="Texture" id=10]
[ext_resource path="res://Assets/Zombie Pressed.png" type="Texture" id=11]
[ext_resource path="res://Assets/Blue Sheep.png" type="Texture" id=12]
[ext_resource path="res://Assets/Blue Sheep Pressed.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pink Sheep.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pink Shep Pressed.png" type="Texture" id=15]
[ext_resource path="res://Assets/White Horse.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Double Size Sprite.gd" type="Script" id=17]
[ext_resource path="res://Assets/Zombie Horse.png" type="Texture" id=18]
[ext_resource path="res://Assets/Brown Recluse.png" type="Texture" id=19]
[ext_resource path="res://Assets/Brown Recluse Pressed.png" type="Texture" id=20]
[ext_resource path="res://Assets/Black Widow.png" type="Texture" id=21]
[ext_resource path="res://Assets/Black Widow Pressed.png" type="Texture" id=22]
[ext_resource path="res://Assets/Skunk.png" type="Texture" id=23]
[ext_resource path="res://Assets/Skunk Pressed.png" type="Texture" id=24]

[node name="Play Four" type="Node2D"]

script = ExtResource( 1 )

[node name="Choose a Character" type="Sprite" parent="." index="0"]

position = Vector2( 120, 16 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="UI" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="Back" type="TextureButton" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Play" type="TextureButton" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 120.0
margin_right = 136.0
margin_bottom = 136.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Character Options" type="Control" parent="UI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 7 )
_sections_unfolded = [ "Rect" ]

[node name="Joe" type="TextureButton" parent="UI/Character Options" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 9 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Zombie" type="TextureButton" parent="UI/Character Options" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 32.0
margin_right = 48.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 11 )
texture_disabled = ExtResource( 11 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Blue Sheep" type="TextureButton" parent="UI/Character Options" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 48.0
margin_right = 32.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 13 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Pink Sheep" type="TextureButton" parent="UI/Character Options" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
texture_disabled = ExtResource( 15 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="White Horse" type="TextureButton" parent="UI/Character Options" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 64.0
margin_right = 32.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Sprite" type="Sprite" parent="UI/Character Options/White Horse" index="0"]

position = Vector2( 8, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )
script = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]
type = "White"

[node name="Zombie Horse" type="TextureButton" parent="UI/Character Options" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Sprite2" type="Sprite" parent="UI/Character Options/Zombie Horse" index="0"]

position = Vector2( 8, 8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
script = ExtResource( 17 )
_sections_unfolded = [ "Transform" ]
type = "Zombie"

[node name="Brown Recluse" type="TextureButton" parent="UI/Character Options" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 80.0
margin_right = 32.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Black Widow" type="TextureButton" parent="UI/Character Options" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 80.0
margin_right = 48.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 22 )
texture_disabled = ExtResource( 22 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Skunk" type="TextureButton" parent="UI/Character Options" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 16.0
margin_top = 96.0
margin_right = 32.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 23 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 24 )
texture_disabled = ExtResource( 24 )
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="UI/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="UI/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="UI/Character Options/Joe" to="UI/Character Options" method="_on_Joe_pressed"]

[connection signal="pressed" from="UI/Character Options/Zombie" to="UI/Character Options" method="_on_Zombie_pressed"]

[connection signal="pressed" from="UI/Character Options/Blue Sheep" to="UI/Character Options" method="_on_Blue_Sheep_pressed"]

[connection signal="pressed" from="UI/Character Options/Pink Sheep" to="UI/Character Options" method="_on_Pink_Sheep_pressed"]

[connection signal="pressed" from="UI/Character Options/White Horse" to="UI/Character Options" method="_on_Horse_pressed"]

[connection signal="pressed" from="UI/Character Options/Zombie Horse" to="UI/Character Options" method="_on_Zombie_Horse_pressed"]

[connection signal="pressed" from="UI/Character Options/Brown Recluse" to="UI/Character Options" method="_on_Brown_Recluse_pressed"]

[connection signal="pressed" from="UI/Character Options/Black Widow" to="UI/Character Options" method="_on_Black_Widow_pressed"]

[connection signal="pressed" from="UI/Character Options/Skunk" to="UI/Character Options" method="_on_Skunk_pressed"]


